--- a/app/src/main/res/layout/activity_bar.xml
+++ b/app/src/main/res/layout/activity_bar.xml
@@ -7,20 +7,22 @@
 
     <View
         android:id="@+id/view3"
-        android:layout_width="464dp"
-        android:layout_height="692dp"
+        android:layout_width="411dp"
+        android:layout_height="519dp"
+        android:layout_marginTop="216dp"
         android:background="@drawable/ic_bg2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view4"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="230dp"
         android:background="@drawable/gb1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +30,8 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="56dp"
+        android:contentDescription="@string/profil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +41,7 @@
         android:id="@+id/textView"
         android:layout_width="58dp"
         android:layout_height="24dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="148dp"
         android:gravity="center"
         android:text="@string/user1"
         android:textColor="@color/birugelap"
@@ -55,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="user111111@gmail.com"
+        android:text="@string/user111111_gmail_com"
         android:textColor="@color/birugelap1"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -68,14 +71,14 @@
         android:id="@+id/textView9"
         android:layout_width="130dp"
         android:layout_height="34dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="236dp"
         android:gravity="center_vertical"
-        android:text="Halaman Depan"
+        android:text="@string/halaman_depan"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -83,14 +86,14 @@
         android:id="@+id/textView10"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:text="Riwayat Tontonan Saya"
+        android:text="@string/riwayat_tontonan_saya"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toEndOf="@+id/button5"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -98,16 +101,16 @@
         android:id="@+id/textView11"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginRight="180dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:gravity="center_vertical"
-        android:text="TV Online Korea"
+        android:text="@string/tv_online_korea"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toEndOf="@+id/button6"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -115,11 +118,11 @@
         android:id="@+id/textView12"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:text="Drama Korea"
+        android:text="@string/drama_korea"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.117"
@@ -132,9 +135,9 @@
         android:layout_height="36dp"
         android:layout_marginTop="28dp"
         android:gravity="center_vertical"
-        android:text="Film Korea"
+        android:text="@string/film_korea"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.117"
@@ -145,11 +148,11 @@
         android:id="@+id/textView14"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:text="Drama Mendatang"
+        android:text="@string/drama_mendatang"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.122"
@@ -160,11 +163,11 @@
         android:id="@+id/textView15"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:text="Premium"
+        android:text="@string/premium"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.122"
@@ -175,11 +178,11 @@
         android:id="@+id/textView16"
         android:layout_width="191dp"
         android:layout_height="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:text="Pengaturan"
+        android:text="@string/pengaturan"
         android:textColor="@color/birugelap"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.117"
@@ -191,7 +194,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="V.1"
+        android:text="@string/v_1"
         android:textColor="@color/birugelap1"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -202,38 +205,38 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="50dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="45dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/ic_baseline_login_24"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintHorizontal_bias="0.956"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:background="@drawable/ic_baseline_home_24"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359" />
+        app:layout_constraintVertical_bias="0.339" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/ic_baseline_update_24"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
@@ -242,11 +245,11 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/tv1"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
@@ -255,11 +258,11 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/film1"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
@@ -268,10 +271,10 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/film2"
         app:backgroundTint="@android:color/transparent"
@@ -281,11 +284,11 @@
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/ic_baseline_calendar_today_24"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
@@ -294,11 +297,11 @@
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/diamond"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
@@ -307,11 +310,11 @@
 
     <Button
         android:id="@+id/button11"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/ic_baseline_settings_24"
         app:backgroundTint="@android:color/transparent"
         app:backgroundTintMode="add"
