--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="peach">#EF5353</color>
     <color name="pink_1">#FF3D9A</color>
     <color name="pink_2">#FDEDF5</color>
     <color name="purple_500">#FF6200EE</color>
